2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amrmtape.pl: Fix diskpath.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Generate an error if fopen of config fail.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Do not call amtrmidx if running a job.
	* server-src/amtrmidx.c: Do not delete index file newer than 7 days.
	* installcheck/amrmtape.pl: Fix check.

2014-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (do) : Set action with special command.

2014-11-03  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Fix hang on eof.

2014-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c: Handle 'x ' lines on stderr for bsdtar
	  restore.

2014-10-10  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Tag 'File removed before we read it' as
	  GOOD.

2014-10-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Decode use base64 xml encoding.

2014-10-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix perl format.

2014-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/file.c (debug_agets): Fix parsing of comment.

2014-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/lexical.pm,
	  perl/Amanda/Taper/Scan/oldest.pm (last_use_label): Fix for empty
	  tapelist.

2014-09-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning.
	* perl/Amanda/Taper/Worker.pm (TAKE_SCRIBE_FROM): Set
	  scribe1->{'cancelled'} to 0.

2014-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Set slot in invalid error.
	* perl/Amanda/Taper/Scan/traditional.pm: Continue on invalid.

2014-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (verify): Failure to read the label is not an
	  error.
